--- a/popup.html
+++ b/popup.html
@@ -69,7 +69,7 @@
     <div id="fileTypeChecklist"></div>
   </div>
   <button id="applyFilterButton" disabled>Apply Filter</button>
-  <button id="downloadButton" disabled>Download All Links</button>
+  <button id="downloadButton" disabled>Download All Files</button>
   <div id="status">Ready to scan</div>
   <script src="popup.js"></script>
 </body>
